[package]
name = "escheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features=["derive"]}
color-eyre = "0.6"
eyre = "0.6"
rand = "0.9"
ratatui = "0.30"
rusqlite = { version = "0.38", features = ["bundled"]}
serde = {version = "1", features=["derive"]}
serde_json = "1"
